# caesar_ocr

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  linode_deploy_steps.md  pyproject.toml  roadmap.md  roadmap_to_api_on_linode.md
apps/company_universe/: README.md
apps/company_universe/db/: company.sqlite  repo.py  schema.sql
apps/domains/cv/: README.md  generate.py  labels.md  plugins.py  rules.yaml  (+1 more)
caesar_ocr/: __init__.py  cli.py  cli_infer.py  cli_infer_token.py  cli_train_token.py  domain_samples.py
caesar_ocr/api/: main.py  token_model_registry.json
caesar_ocr/config/: defaults.yaml  label_maps.yaml
caesar_ocr/io/: loaders.py  writers.py
caesar_ocr/layoutlm/: __init__.py  datasets.py  infer.py  metrics.py  token_infer.py  train.py
caesar_ocr/ocr/: engine.py  postprocess.py  tesseract.py
caesar_ocr/pipeline/: analyze.py  schemas.py
caesar_ocr/regex/: classify.py  engine.py  plugins.py  rules.yaml
scripts/: auto_label_cv.py  auto_label_diploma.py  auto_label_fehlerprotokoll.py  auto_label_passport.py  build_eval_manifest.py  build_jsonl.py  check_dataset_quality.py  eval_fields.py  eval_token_labels.py  generate_diploma_eval_set.py  generate_passport_eval_set.py  infer_layoutlmv3.py  infer_layoutlmv3_token.py  linode_rebuild.sh  render_pngs.py  split_jsonl.py  train_layoutlmv3.py  train_layoutlmv3_token.py
tests/: test_build_jsonl.py  test_cli.py  test_config.py  test_io.py  test_io_pdf_loader.py  test_layoutlm.py  test_layoutlm_infer.py  test_ocr.py  test_pipeline.py  test_pipeline_layoutlm_token.py  test_regex.py
(+13 files in other folders)
